--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "react": "18.2.0",
         "react-native": "0.72.6",
+        "react-native-fs": "^2.20.0",
         "react-native-python": "0.0.0"
     },
     "devDependencies": {
