--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-navigation/drawer": "^6.6.6",
         "@react-navigation/native": "^6.1.9",
         "react": "18.2.0",
         "react-native": "0.72.6",
         "react-native-fs": "^2.20.0",
+        "react-native-gesture-handler": "^2.13.4",
         "react-native-paper": "^5.11.1",
         "react-native-safe-area-context": "^4.7.4",
         "react-native-screens": "^3.27.0",
