--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.13.4",
         "react-native-paper": "^5.11.1",
+        "react-native-reanimated": "^3.5.4",
         "react-native-safe-area-context": "^4.7.4",
         "react-native-screens": "^3.27.0",
         "react-native-vector-icons": "^10.0.1"
