--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "ios": "react-native run-ios",
         "lint": "eslint .",
         "start": "react-native start",
-        "test": "jest"
+        "test": "jest --config jest.config.ts"
     },
     "dependencies": {
+        "@atsu/taihou": "github:Tsukugi/Taihou#develop",
         "@react-navigation/drawer": "^6.6.6",
         "@react-navigation/native": "^6.1.9",
         "react": "18.2.0",
@@ -20,12 +21,14 @@
         "react-native-reanimated": "^3.5.4",
         "react-native-safe-area-context": "^4.7.4",
         "react-native-screens": "^3.27.0",
-        "react-native-vector-icons": "^10.0.1"
+        "react-native-vector-icons": "^10.0.1",
+        "use-debounce": "^9.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@jest/globals": "^29.7.0",
         "@react-native/eslint-config": "^0.72.2",
         "@react-native/metro-config": "^0.72.11",
         "@tsconfig/react-native": "^3.0.0",
@@ -38,6 +41,8 @@
         "metro-react-native-babel-preset": "0.76.8",
         "prettier": "^2.4.1",
         "react-test-renderer": "18.2.0",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
         "typescript": "4.8.4"
     },
     "engines": {
