--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "nhentai.react.native",
-    "version": "0.0.1",
+    "name": "@atsu/rapunzel",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
         "android": "react-native run-android",
@@ -17,6 +17,7 @@
         "react-native": "0.72.6",
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.13.4",
+        "react-native-mmkv-storage": "^0.9.1",
         "react-native-paper": "^5.11.1",
         "react-native-reanimated": "^3.5.4",
         "react-native-safe-area-context": "^4.7.4",
