--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
         "test": "jest --config jest.config.ts"
     },
     "dependencies": {
-        "@atsu/lilith": "^0.2.3",
+        "@atsu/lilith": "github:Tsukugi/Lilith",
         "@atsu/taihou": "^0.3.2",
         "@react-native-cookies/cookies": "^6.2.1",
         "@react-navigation/drawer": "^6.6.6",
         "@react-navigation/native": "^6.1.9",
+        "cheerio": "^1.0.0-rc.12",
         "react": "18.2.0",
         "react-native": "0.72.6",
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.13.4",
         "react-native-mmkv-storage": "^0.9.1",
         "react-native-paper": "^5.11.1",
+        "react-native-paper-select": "^1.0.2",
         "react-native-reanimated": "^3.5.4",
         "react-native-safe-area-context": "^4.7.4",
         "react-native-screens": "^3.27.0",
         "react-native-vector-icons": "^10.0.1",
         "react-native-webview": "^13.6.2",
-        "use-debounce": "^9.0.4",
-        "cheerio": "^1.0.0-rc.12"
+        "use-debounce": "^9.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
