--- a/ios/Rapunzel.xcodeproj/xcshareddata/xcschemes/Rapunzel.xcscheme
+++ b/ios/Rapunzel.xcodeproj/xcshareddata/xcschemes/Rapunzel.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "NHentaiReact.app"
-               BlueprintName = "NHentaiReact"
-               ReferencedContainer = "container:NHentaiReact.xcodeproj">
+               BuildableName = "Rapunzel.app"
+               BlueprintName = "Rapunzel"
+               ReferencedContainer = "container:Rapunzel.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "NHentaiReactTests.xctest"
-               BlueprintName = "NHentaiReactTests"
-               ReferencedContainer = "container:NHentaiReact.xcodeproj">
+               BuildableName = "RapunzelTests.xctest"
+               BlueprintName = "RapunzelTests"
+               ReferencedContainer = "container:Rapunzel.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "NHentaiReact.app"
-            BlueprintName = "NHentaiReact"
-            ReferencedContainer = "container:NHentaiReact.xcodeproj">
+            BuildableName = "Rapunzel.app"
+            BlueprintName = "Rapunzel"
+            ReferencedContainer = "container:Rapunzel.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "NHentaiReact.app"
-            BlueprintName = "NHentaiReact"
-            ReferencedContainer = "container:NHentaiReact.xcodeproj">
+            BuildableName = "Rapunzel.app"
+            BlueprintName = "Rapunzel"
+            ReferencedContainer = "container:Rapunzel.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
