--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     },
     "dependencies": {
         "@atsu/lilith": "github:Tsukugi/Lilith",
+        "@atsu/lilith-nhentai": "github:Tsukugi/LilithNHentai",
         "@atsu/taihou": "^0.4.0",
         "@react-native-cookies/cookies": "^6.2.1",
         "@react-navigation/drawer": "^6.6.6",
         "@react-navigation/native": "^6.1.9",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "1.0.0-rc.12",
         "react": "18.2.0",
         "react-native": "0.72.6",
         "react-native-document-picker": "^9.3.1",
