--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@atsu/lilith": "github:Tsukugi/Lilith",
         "@atsu/lilith-nhentai": "github:Tsukugi/LilithNHentai",
+        "@atsu/lilith-mangadex": "github:Tsukugi/LilithMangaDex",
         "@atsu/taihou": "^0.4.0",
         "@react-native-cookies/cookies": "^6.2.1",
         "@react-navigation/drawer": "^6.6.6",
