--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@atsu/rapunzel",
-    "version": "0.7.1",
+    "version": "0.7.2",
     "scripts": {
         "android": "react-native run-android",
         "ios": "react-native run-ios",
@@ -17,7 +17,7 @@
         "@react-native-cookies/cookies": "^6.2.1",
         "@react-navigation/drawer": "^6.6.6",
         "@react-navigation/native": "^6.1.9",
-        "cheerio": "1.0.0-rc.12",
+        "cheerio": "^1.0.0-rc.12",
         "react": "18.2.0",
         "react-native": "0.72.6",
         "react-native-document-picker": "^9.3.1",
