--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-    "name": "@atsu/rapunzel",
-    "version": "0.8.1",
-    "scripts": {
-        "android": "react-native run-android",
-        "ios": "react-native run-ios",
-        "lint": "eslint .",
-        "start": "react-native start",
-        "test": "jest --config jest.config.ts"
-    },
-    "dependencies": {
-        "@atsu/lilith": "github:Tsukugi/Lilith",
-        "@atsu/lilith-hentag": "github:Tsukugi/LilithHentag",
-        "@atsu/lilith-mangadex": "github:Tsukugi/LilithMangaDex",
-        "@atsu/lilith-nhentai": "github:Tsukugi/LilithNHentai",
-        "@atsu/taihou": "^0.4.0",
-        "@react-native-cookies/cookies": "^6.2.1",
-        "@react-navigation/drawer": "^6.6.6",
-        "@react-navigation/native": "^6.1.9",
-        "cheerio": "^1.0.0-rc.12",
-        "react": "18.2.0",
-        "react-native": "0.72.6",
-        "react-native-document-picker": "^9.3.1",
-        "react-native-fs": "^2.20.0",
-        "react-native-gesture-handler": "^2.13.4",
-        "react-native-mmkv-storage": "^0.9.1",
-        "react-native-paper": "^5.11.1",
-        "react-native-paper-select": "^1.0.2",
-        "react-native-reanimated": "^3.5.4",
-        "react-native-safe-area-context": "^4.7.4",
-        "react-native-screens": "^3.27.0",
-        "react-native-vector-icons": "^10.0.1",
-        "react-native-webview": "^13.6.2",
-        "use-debounce": "^9.0.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@babel/preset-env": "^7.20.0",
-        "@babel/runtime": "^7.20.0",
-        "@jest/globals": "^29.7.0",
-        "@react-native/eslint-config": "^0.72.2",
-        "@react-native/metro-config": "^0.72.11",
-        "@tsconfig/react-native": "^3.0.0",
-        "@types/react": "^18.0.24",
-        "@types/react-native-vector-icons": "^6.4.16",
-        "@types/react-test-renderer": "^18.0.0",
-        "babel-jest": "^29.2.1",
-        "eslint": "^8.19.0",
-        "jest": "^29.2.1",
-        "metro-react-native-babel-preset": "0.76.8",
-        "prettier": "^2.4.1",
-        "react-test-renderer": "18.2.0",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "4.8.4"
-    },
-    "engines": {
-        "node": ">=16"
-    }
+  "name": "@atsu/rapunzel",
+  "version": "0.8.2",
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest --config jest.config.ts",
+    "release": "ts-node scripts/release.ts",
+    "release-github": "ts-node scripts/release-github.ts"
+  },
+  "dependencies": {
+    "@atsu/lilith": "github:Tsukugi/Lilith",
+    "@atsu/lilith-hentag": "github:Tsukugi/LilithHentag",
+    "@atsu/lilith-mangadex": "github:Tsukugi/LilithMangaDex",
+    "@atsu/lilith-nhentai": "github:Tsukugi/LilithNHentai",
+    "@atsu/taihou": "^0.4.0",
+    "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "cheerio": "^1.0.0-rc.12",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-mmkv-storage": "^0.9.1",
+    "react-native-paper": "^5.11.1",
+    "react-native-paper-select": "^1.0.2",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-webview": "^13.6.2",
+    "use-debounce": "^9.0.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@jest/globals": "^29.7.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.16",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.8",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "4.8.4"
+  },
+  "engines": {
+    "node": ">=16"
+  }
 }
