--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "dev": "expo start --dev-client",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -14,7 +14,8 @@
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "build:android": "ts-node scripts/build-apk.ts"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.8.12",
@@ -23,7 +24,9 @@
     "@react-navigation/stack": "^7.6.12",
     "@reduxjs/toolkit": "^2.11.1",
     "expo": "~54.0.29",
+    "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "^6.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.1",
@@ -49,6 +52,7 @@
     "jest": "^30.2.0",
     "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.49.0"
   },
