--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
+    "cheerio": "^1.1.2",
     "expo": "~54.0.29",
     "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.1",
