--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@atsu/lilith-mangadex": "file:../LilithMangaDex",
     "@atsu/lilith-nhentai": "file:../LilithNHentai",
     "@atsu/taihou": "file:../Taihou",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.25",
