--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.12.2",
     "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
